--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,1 +1,21 @@
-<router-outlet></router-outlet>
+<div class="app">
+  <mat-toolbar *ngIf="($isLogged() | async) || isLoginOrRegister()" class="flex justify-between bg-white border-b border-b-mdd-purple">
+    <img width="100" src="assets/logo_p6.png" alt="Logo MDD">
+    <div *ngIf="($isLogged() | async)" class="flex gap-4 md:gap-8 items-center py-2 text-lg">
+      <span routerLink="posts" routerLinkActive="text-mdd-purple font-bold" class="link cursor-pointer">Posts</span>
+      <span routerLink="topics" routerLinkActive="text-mdd-purple font-bold" class="link cursor-pointer">Topics</span>
+      <mat-icon routerLink="me" routerLinkActive="text-mdd-purple" class="link w-2 h-2 cursor-pointer">account_circle</mat-icon>
+    </div>
+  </mat-toolbar>
+  <div>
+    <router-outlet>
+        <div *ngIf="!($isLogged() | async) && !isLoginOrRegister()" style="height: 100vh; display: flex; flex-direction: column; justify-content: center; text-align: center; margin: auto">
+          <img class="mx-auto w-60" src="assets/logo_p6.png" alt="Logo MDD">
+          <div class="flex gap-4 max-md:flex-col items-center mx-auto max-md:w-52">
+            <mat-button-toggle routerLink="login" class="px-2 w-full">Login</mat-button-toggle>
+            <mat-button-toggle routerLink="register" class="px-2 w-full">Register</mat-button-toggle>
+          </div>
+        </div>
+    </router-outlet>
+  </div>
+</div>
