--- a/front/src/app/features/posts/components/form/form.component.html
+++ b/front/src/app/features/posts/components/form/form.component.html
@@ -1,14 +1,13 @@
-<div class="create m3">
-  <mat-card>
-    <mat-card-title>
+<div class="create m3 ">
+    <mat-card-content style="padding-left: 0.5rem" *ngIf="postForm">
+      <div class="flex items-center justify-between mt-4 mb-6">
         <button mat-icon-button routerLink="/posts">
           <mat-icon>arrow_back</mat-icon>
         </button>
-        <h1 *ngIf="onUpdate">Update post</h1>
-    </mat-card-title>
-    <mat-card-content style="padding-left: 0.5rem" *ngIf="postForm">
-      <h1 *ngIf="!onUpdate">Create a new post</h1>
-      <form style="display:flex; flex-direction: column" [formGroup]="postForm" (ngSubmit)="submit()">
+        <h1 *ngIf="!onUpdate" class="font-bold !pt-4">Create a new post</h1>
+        <div></div>
+      </div>
+      <form class="md:max-w-lg mx-auto" style="display:flex; flex-direction: column" [formGroup]="postForm" (ngSubmit)="submit()">
         <mat-form-field appearance="outline">
           <mat-label>Title</mat-label>
           <input matInput formControlName="title">
@@ -32,5 +31,4 @@
         </div>
       </form>
     </mat-card-content>
-  </mat-card>
 </div>
