--- a/front/src/app/features/posts/components/form/form.component.html
+++ b/front/src/app/features/posts/components/form/form.component.html
@@ -9,11 +9,7 @@
       </div>
       <form class="md:max-w-lg mx-auto" style="display:flex; flex-direction: column" [formGroup]="postForm" (ngSubmit)="submit()">
         <mat-form-field appearance="outline">
-          <mat-label>Title</mat-label>
-          <input matInput formControlName="title">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-          <mat-label>Topic</mat-label>
+          <mat-label>Select a topic</mat-label>
           <mat-select ngDefaultControl formControlName="topicId">
             <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">
               {{topic.title}}
@@ -21,10 +17,14 @@
           </mat-select>
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>Content</mat-label>
+          <mat-label>Post title</mat-label>
+          <input matInput formControlName="title">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+          <mat-label>Post content</mat-label>
           <textarea matInput rows="8" formControlName="content"></textarea>
         </mat-form-field>
-        <div>
+        <div class="mx-auto">
           <button mat-raised-button color="primary" type="submit" [disabled]="postForm.invalid">
             Save
           </button>
