More info for comment

--- a/front/src/app/features/posts/components/detail/detail.component.html
+++ b/front/src/app/features/posts/components/detail/detail.component.html
@@ -23,9 +23,13 @@
       <hr class="mb-4">
       <p class="text-lg">Comments</p>
       <section *ngIf="comments$">
-        <mat-card class="!mb-4" *ngFor="let comment of comments$ | async">
-          <p> {{ comment.comment }} </p>
-        </mat-card>
+        <div class="mb-4 flex max-md:flex-col gap-4" *ngFor="let comment of comments$ | async">
+          <mat-card class="md:w-1/3 h-fit"> {{ comment.author }} </mat-card>
+          <mat-card class="md:w-2/3 bg-gray-50">
+            <p>{{ comment.comment }} </p>
+            <p class="text-end text-xs">{{ comment.createdAt | date:'dd/MM/yyyy, HH:mm' }} </p>
+          </mat-card>
+        </div>
       </section>
   </section>
 </div>
