--- a/front/src/app/features/posts/components/list/list.component.html
+++ b/front/src/app/features/posts/components/list/list.component.html
@@ -1,9 +1,16 @@
 <div class="p-4 md:p-6">
-      <button style="margin-bottom: 1.5rem" data-testid="create-button-admin" mat-raised-button color="primary" routerLink="create">
-        <mat-icon>add</mat-icon>
-        <span class="ml1">Create</span>
-      </button>
-    <div class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-6">
+  <div class="flex justify-between mb-4 md:mb-6">
+    <button mat-raised-button color="primary" routerLink="create">
+      <span class="mr-2">Create</span>
+      <mat-icon>add</mat-icon>
+    </button>
+    <button mat-raised-button color="primary" (click)="sortPostsByDate()">
+      <span class="mr-2">Sort by</span>
+      <mat-icon *ngIf="sortAscending">keyboard_arrow_down</mat-icon>
+      <mat-icon *ngIf="!sortAscending">keyboard_arrow_up</mat-icon>
+    </button>
+  </div>
+  <div class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-6">
       <mat-card [routerLink]="['detail',post.id]" class="!flex !flex-col justify-between cursor-pointer bg-gray-50" *ngFor="let post of (posts$ | async)">
           <mat-card-title class="!mb-2 !font-bold">{{ post.title }}</mat-card-title>
           <div class="flex items-center gap-2 !text-lg mb-4">
@@ -14,5 +21,5 @@
           <p> {{ post.content }} </p>
         </mat-card-content>
       </mat-card>
-    </div>
+  </div>
 </div>
