--- a/front/src/app/components/me/me.component.html
+++ b/front/src/app/components/me/me.component.html
@@ -17,7 +17,7 @@
   </section>
   <hr class="my-4">
   <section class="flex flex-col justify-center text-center">
-    <h2>Subscriptions <span class="text-base" *ngIf="subscriptions">({{subscriptions.length}})</span></h2>
+    <h2 class="mb-2">Subscriptions <span class="text-base" *ngIf="subscriptions">({{subscriptions.length}})</span></h2>
     <div class="flex flex-col justify-center text-center">
       <div *ngIf="!subscriptions" class="text-center">
         <p>No subscriptions</p>
