--- a/front/src/app/features/posts/components/list/list.component.html
+++ b/front/src/app/features/posts/components/list/list.component.html
@@ -16,6 +16,7 @@
           <div class="flex items-center gap-2 !text-lg mb-4">
             <mat-card-subtitle class="!mb-1 !text-black"> {{ post.createdAt | date: 'longDate'}} </mat-card-subtitle>
             <mat-card-subtitle class="!mb-0 !text-black" *ngIf="post.author">{{ post.author }}</mat-card-subtitle>
+            <mat-card-subtitle class="!mb-0 !text-black" *ngIf="post.author">{{ post.topic?.title }}</mat-card-subtitle>
           </div>
         <mat-card-content>
           <p> {{ post.content }} </p>
