--- a/front/src/app/features/posts/components/list/list.component.html
+++ b/front/src/app/features/posts/components/list/list.component.html
@@ -14,13 +14,13 @@
       <mat-card [routerLink]="['detail',post.id]" class="!flex !flex-col justify-between cursor-pointer bg-gray-50" *ngFor="let post of (posts$ | async)">
           <mat-card-title class="!mb-2 !font-bold">{{ post.title }}</mat-card-title>
           <div class="flex items-center gap-2 !text-lg mb-4">
-            <mat-card-subtitle class="!mb-1 !text-black"> {{ post.createdAt | date: 'longDate'}} </mat-card-subtitle>
-            <mat-card-subtitle class="!mb-0 !text-black" *ngIf="post.author">{{ post.author }}</mat-card-subtitle>
+            <mat-card-subtitle class="!mb-1 !text-black" *ngIf="post.author">{{ post.author }}</mat-card-subtitle>
             <mat-card-subtitle class="!mb-0 !text-black" *ngIf="post.author">{{ post.topic?.title }}</mat-card-subtitle>
           </div>
-        <mat-card-content>
+        <mat-card-content class="!mb-4">
           <p> {{ post.content }} </p>
         </mat-card-content>
+        <mat-card-subtitle class="!mb-1 !text-black !text-xs !flex !self-end"> {{ post.createdAt | date: 'longDate'}} </mat-card-subtitle>
       </mat-card>
   </div>
 </div>
