--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div *ngIf="($isLogged() | async)" class="flex gap-4 md:gap-8 items-center py-2 text-lg">
       <span routerLink="posts" routerLinkActive="text-mdd-purple font-bold" class="link cursor-pointer">Posts</span>
       <span routerLink="topics" routerLinkActive="text-mdd-purple font-bold" class="link cursor-pointer">Topics</span>
-      <mat-icon routerLink="me" routerLinkActive="text-mdd-purple" class="link w-2 h-2 cursor-pointer">account_circle</mat-icon>
+      <mat-icon routerLink="me" routerLinkActive="text-mdd-purple" class="link cursor-pointer mr-2">account_circle</mat-icon>
     </div>
   </mat-toolbar>
   <div>
