--- a/front/src/app/features/posts/components/list/list.component.html
+++ b/front/src/app/features/posts/components/list/list.component.html
@@ -1,10 +1,10 @@
 <div class="p-4 md:p-6">
   <div class="flex justify-between mb-4 md:mb-6">
-    <button mat-raised-button color="primary" routerLink="create">
+    <button mat-raised-button class="bg-mdd-purple text-white" routerLink="create">
       <span class="mr-2">Create</span>
       <mat-icon>add</mat-icon>
     </button>
-    <button mat-raised-button color="primary" (click)="sortPostsByDate()">
+    <button mat-raised-button class="bg-mdd-purple text-white" (click)="sortPostsByDate()">
       <span class="mr-2">Sort by</span>
       <mat-icon *ngIf="sortAscending">keyboard_arrow_down</mat-icon>
       <mat-icon *ngIf="!sortAscending">keyboard_arrow_up</mat-icon>
@@ -12,15 +12,17 @@
   </div>
   <div class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-6">
       <mat-card [routerLink]="['detail',post.id]" class="!flex !flex-col justify-between cursor-pointer bg-gray-50" *ngFor="let post of (posts$ | async)">
-          <mat-card-title class="!mb-2 !font-bold">{{ post.title }}</mat-card-title>
-          <div class="flex items-center gap-4 md:gap-6 !text-lg mb-4">
-            <mat-card-subtitle class="!mb-1 !text-black" *ngIf="post.author">{{ post.author }}</mat-card-subtitle>
-            <mat-card-subtitle class="!mb-0 !text-black" *ngIf="post.author">{{ post.topic?.title }}</mat-card-subtitle>
+          <div>
+            <mat-card-title class="!mb-3 !font-bold">{{ post.title }}</mat-card-title>
+            <div class="flex items-center gap-4 md:gap-6 !text-lg mb-4">
+              <mat-card-subtitle class="!mb-1 !text-black" *ngIf="post.author">{{ post.author }}</mat-card-subtitle>
+              <mat-card-subtitle class="!mb-0 !text-black" *ngIf="post.topic?.title">{{ post.topic?.title }}</mat-card-subtitle>
+            </div>
           </div>
         <mat-card-content class="!mb-4">
-          <p> {{ post.content }} </p>
+          <p class="line-clamp-4"> {{ post.content }} </p>
         </mat-card-content>
-        <mat-card-subtitle class="!mb-1 !text-black !text-xs !flex !self-end"> {{ post.createdAt | date: 'longDate'}} </mat-card-subtitle>
+        <mat-card-subtitle class="!mb-1 !text-black !text-xs !flex !self-end"> {{ post.createdAt | date: 'dd/MM/yyyy'}} </mat-card-subtitle>
       </mat-card>
   </div>
 </div>
