--- a/front/src/app/features/posts/components/detail/detail.component.html
+++ b/front/src/app/features/posts/components/detail/detail.component.html
@@ -1,12 +1,11 @@
-<div class="p-4">
-  <button class="!mb-2" mat-icon-button (click)="back()">
+<div class="p-4 flex max-md:flex-col gap-2">
+  <button class="!mb-2 max-md:!-ml-2" mat-icon-button (click)="back()">
     <mat-icon>arrow_back</mat-icon>
   </button>
-  <section class="pl-2" *ngIf="post">
+  <section class="pt-2 w-full" *ngIf="post">
       <div>
         <h1 class="font-bold">{{post.title | titlecase}}</h1>
         <div class="flex gap-8 text-base font-normal mb-4">
-          <p> {{ post.createdAt| date: 'longDate'}}</p>
           <p> {{ post.author }}</p>
           <p> {{ post.topic?.title }}</p>
         </div>
@@ -19,26 +18,27 @@
           <p>Content: {{ post.content }} </p>
           <br>
         </div>
+        <p class="text-end text-xs"> {{ post.createdAt| date: 'dd/MM/yyyy'}}</p>
       </mat-card-content>
       <hr class="mb-4">
       <!-- Comments -->
       <p class="text-lg">Comments</p>
       <section *ngIf="comments$">
         <div class="mb-4 flex max-md:flex-col gap-4" *ngFor="let comment of comments$ | async">
-          <mat-card class="md:w-1/3 h-fit"> {{ comment.author }} </mat-card>
-          <mat-card class="md:w-2/3 bg-gray-50">
+          <mat-card class="w-fit md:w-1/3 h-fit"> {{ comment.author }} </mat-card>
+          <mat-card class="w-fit !self-end md:w-2/3 bg-gray-50">
             <p>{{ comment.comment }} </p>
             <p class="text-end text-xs">{{ comment.createdAt | date:'dd/MM/yyyy, HH:mm' }} </p>
           </mat-card>
         </div>
       </section>
-    <form *ngIf="postForm" class="md:max-w-lg mx-auto" style="display:flex; flex-direction: column" [formGroup]="postForm" (ngSubmit)="submit()">
+    <form *ngIf="postForm" class="flex gap-4 !mt-12 md:max-w-lg mx-auto" [formGroup]="postForm" (ngSubmit)="submit()">
       <mat-form-field appearance="outline" class="!w-full">
-        <mat-label>Your comment</mat-label>
+        <mat-label>Write your comment here</mat-label>
         <textarea matInput rows="8" formControlName="comment"></textarea>
       </mat-form-field>
-      <button mat-raised-button color="primary" type="submit" [disabled]="postForm.invalid">
-        Comment
+      <button class="md:self-end md:w-fit md:h-fit" mat-raised-button type="submit" [disabled]="postForm.invalid">
+        <mat-icon>near_me</mat-icon>
       </button>
     </form>
   </section>
