--- a/front/src/app/features/posts/components/detail/detail.component.html
+++ b/front/src/app/features/posts/components/detail/detail.component.html
@@ -6,6 +6,7 @@
       <div>
         <h1 class="font-bold">{{post.title | titlecase}}</h1>
         <div class="flex gap-8 text-base font-normal mb-4">
+          <p> {{ post.createdAt| date: 'dd/MM/yyyy'}}</p>
           <p> {{ post.author }}</p>
           <p> {{ post.topic?.title }}</p>
         </div>
@@ -18,7 +19,6 @@
           <p>Content: {{ post.content }} </p>
           <br>
         </div>
-        <p class="text-end text-xs"> {{ post.createdAt| date: 'dd/MM/yyyy'}}</p>
       </mat-card-content>
       <hr class="mb-4">
       <!-- Comments -->
