--- a/front/src/app/features/posts/components/detail/detail.component.html
+++ b/front/src/app/features/posts/components/detail/detail.component.html
@@ -2,7 +2,7 @@
   <button class="!mb-2 max-md:!-ml-2" mat-icon-button (click)="back()">
     <mat-icon>arrow_back</mat-icon>
   </button>
-  <section class="pt-2 w-full" *ngIf="post">
+  <section class="pt-2 md:pr-4 w-full" *ngIf="post">
       <div>
         <h1 class="font-bold">{{post.title | titlecase}}</h1>
         <div class="flex gap-8 text-base font-normal mb-4">
@@ -15,7 +15,7 @@
         <div class="my2">
           <span class="ml1">{{ post.date | date: 'longDate'}}</span>
         </div>
-        <div class="description">
+        <div class="description max-w-screen-md">
           <p>Content: {{ post.content }} </p>
           <br>
         </div>
