--- a/front/src/app/components/me/me.component.html
+++ b/front/src/app/components/me/me.component.html
@@ -1,4 +1,4 @@
-<section class="mt-4">
+<section class="my-4">
     <button class="!mb-4 !ml-2" mat-icon-button (click)="back()">
       <mat-icon>arrow_back</mat-icon>
     </button>
@@ -23,7 +23,7 @@
         <p>No subscriptions</p>
       </div>
       <div class="grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 md:gap-6 px-4">
-        <mat-card *ngFor="let subscription of subscriptions" class="!flex !flex-col text-start bg-gray-50 p-4">
+        <mat-card *ngFor="let subscription of subscriptions" class="!flex !flex-col text-start bg-gray-50 p-4 !mb-4">
           <h3 class="!font-bold"> {{ subscription.title }} </h3>
           <p> {{ subscription.content }} </p>
           <button mat-raised-button (click)="unsubscribe(subscription.id)" class="!mx-auto bg-mdd-purple font-bold text-xs text-white">Unsubscribe</button>
