--- a/front/src/app/features/auth/components/login/login.component.html
+++ b/front/src/app/features/auth/components/login/login.component.html
@@ -18,7 +18,7 @@
                     </button>
                 </mat-form-field>
             </mat-card-content>
-            <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Submit</button>
+            <button mat-raised-button class="bg-mdd-purple text-white" type="submit" [disabled]="form.invalid">Submit</button>
             <p *ngIf="onError" class="error">An error occurred</p>
         </form>
     </mat-card>
