--- a/front/src/app/features/auth/components/register/register.component.html
+++ b/front/src/app/features/auth/components/register/register.component.html
@@ -19,7 +19,7 @@
                     <input matInput placeholder="Password" formControlName="password">
                 </mat-form-field>
             </mat-card-content>
-            <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Submit</button>
+            <button mat-raised-button class="bg-mdd-purple text-white" type="submit" [disabled]="form.invalid">Submit</button>
             <span *ngIf="onError">An error occurred</span>
         </form>
     </mat-card>
