Navbar come from right now

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -21,7 +21,7 @@
 
   <!-- Side vertical navbar for mobile when logged -->
   <mat-sidenav-container>
-    <mat-sidenav #sidenav class="w-1/2">
+    <mat-sidenav #sidenav class="w-1/2" position="end">
       <mat-nav-list class="!flex !flex-col !justify-between !h-[90vh]">
         <div>
           <a mat-list-item (click)="sidenav.toggle()" routerLink="posts" routerLinkActive="text-mdd-purple font-bold" class="link">Posts</a>
