--- a/front/src/app/features/auth/components/login/login.component.html
+++ b/front/src/app/features/auth/components/login/login.component.html
@@ -2,14 +2,14 @@
   <button class="!ml-2" mat-icon-button (click)="back()">
     <mat-icon>arrow_back</mat-icon>
   </button>
-    <mat-card style="margin-inline: auto">
-        <mat-card-title style="margin-bottom: 1.5rem">Login</mat-card-title>
+    <mat-card style="margin-inline: auto" class="!border-0 bg-gray-50 !shadow-none">
+        <mat-card-title class="!my-6 !text-center">Login</mat-card-title>
         <form class="login-form" [formGroup]="form" (ngSubmit)="submit()">
             <mat-card-content style="display: flex; flex-direction: column">
-                <mat-form-field>
+                <mat-form-field appearance="outline">
                     <input matInput placeholder="Email" formControlName="email">
                 </mat-form-field>
-                <mat-form-field>
+                <mat-form-field appearance="outline">
                     <input matInput [type]="hide ? 'password' : 'text'" placeholder="Password"
                         formControlName="password">
                     <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
@@ -18,8 +18,10 @@
                     </button>
                 </mat-form-field>
             </mat-card-content>
-            <button mat-raised-button class="bg-mdd-purple text-white" type="submit" [disabled]="form.invalid">Submit</button>
+          <div class="flex justify-center">
+            <button mat-raised-button class="bg-mdd-purple text-white" type="submit" [disabled]="form.invalid">Connect</button>
             <p *ngIf="onError" class="error">An error occurred</p>
+          </div>
         </form>
     </mat-card>
 </div>
