--- a/front/src/app/components/me/me.component.html
+++ b/front/src/app/components/me/me.component.html
@@ -1,4 +1,4 @@
-<section class="my-4">
+<section class="my-4 px-4">
     <button class="!mb-4 !ml-2" mat-icon-button (click)="back()">
       <mat-icon>arrow_back</mat-icon>
     </button>
